Responsive photo couverture

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -30,9 +30,9 @@
         <h1>Moi c'est Natacha Desse.</h1>
         <p><strong>Développeuse</strong> en formation <strong> Front/Back</strong></p>
 
-        <div id="image-cover">
+        <div id="image-cover" class="flex">
             <!-- Ajouter ici les différentes sources selon media port-->
-            <img  class= "Amsterdam bloc" src="img/JB7A0519_s.jpg" alt="Natacha Desse">
+            <!--<img  class= "Amsterdam flex" src="img/JB7A0519_s.jpg" alt="Natacha Desse"> -->
         </div>
 
         <p class="sous-titre"><em>A la recherche</em> de ma <em>prochaine</em> <strong>collaboration professionnelle</strong> dans le domaine de la <em>programmation.</em> 
@@ -73,10 +73,5 @@
     </section>
 
 
-    
 </body>
 </html>
-
-
-
-
