Ajout fichier javascript

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -45,13 +45,13 @@
         </p>
 
         <div class="boutons"> 
-            <div class="bouton rouge"><a href="#"> Contact </a></div>
-            <div class="bouton blanc"><a href="#"> CV </a></div>
+            <div class="bouton rouge"><a href="https://fr.linkedin.com/in/natacha-desse-298ba1104/en"> Contact </a></div>
+            <div class="bouton blanc"><a href="documents\Resume - Natacha Desse May 2022.pdf"> CV </a></div>
         </div>
     </section>
 
 
-    <!--Section parcours -->
+    <!--SECTION PARCOURS -->
     <section id="parcours">
     <div id="repère-parcours" class="repère"></div>
     <div class="titre"> 
@@ -148,6 +148,6 @@
 
     </section>
 
-
+<script src="Site CV Natacha.js"></script>
 </body>
 </html>
