Animation des boutons Acceuil

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -45,8 +45,8 @@
         </p>
 
         <div class="boutons"> 
-            <div class="bouton rouge"><a href="https://fr.linkedin.com/in/natacha-desse-298ba1104/en"> Contact </a></div>
-            <div class="bouton blanc"><a href="documents\Resume - Natacha Desse May 2022.pdf"> CV </a></div>
+            <div class="bouton rouge reveal"><a href="https://fr.linkedin.com/in/natacha-desse-298ba1104/en"> Contact </a></div>
+            <div class="bouton blanc reveal"><a href="documents\Resume - Natacha Desse May 2022.pdf"> CV </a></div>
         </div>
     </section>
 
