Ajout de la croix menu mobile

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -18,12 +18,12 @@
             <label for="mobile"><span class="material-symbols-outlined burger">menu</span></label>
             <input type="checkbox" id="mobile" role="button">
             <ul>
-                <li><a href="#repère-parcours">Parcours</a></li>
-                <li><a href="#repère-compétences">Compétences</a></li>
-                <li><a href="#">Cursus Académique</a></li>
-                <li><a href="#">Expérience Pro</a></li>
-                <li><a href="#">Centres d'intérêt</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#repère-parcours" class="element-menu">Parcours</a></li>
+                <li><a href="#repère-compétences" class="element-menu">Compétences</a></li>
+                <li><a href="#" class="element-menu">Cursus Académique</a></li>
+                <li><a href="#" class="element-menu">Expérience Pro</a></li>
+                <li><a href="#" class="element-menu">Centres d'intérêt</a></li>
+                <li><a href="#" class="element-menu">Contact</a></li>
             </ul>
         </div>
     </nav>
