Debut Mobile Responsive Design

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -21,7 +21,7 @@
                 <li><a href="#repère-parcours" class="element-menu">Parcours</a></li>
                 <li><a href="#repère-compétences" class="element-menu">Compétences</a></li>
                 <li><a href="#repère-cursus" class="element-menu">Cursus Académique</a></li>
-                <li><a href="#" class="element-menu">Expérience Pro</a></li>
+                <li><a href="#repère-experience-pro" class="element-menu">Expérience Pro</a></li>
                 <li><a href="#" class="element-menu">Centres d'intérêt</a></li>
                 <li><a href="#" class="element-menu">Contact</a></li>
             </ul>
@@ -201,11 +201,22 @@
                 <br>
                 <p>Diplôme 2ème année en Economie et Management</p>
             </div>
+
+            <img class="crypto-punk" src="img\crypto punk 240_s.png" alt="crypto punk_240">
+    </section>
+
+    <section id="experience-pro">
+        <div id="repère-experience-pro" class="repère"></div>       
+        <div class="titre"> 
+            <h2>Expérience professionnelle</h2>
+            <div class="decalage noir"></div>
+        </div>
     </section>
 
 
 
-
 <script src="Site CV Natacha.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
 </body>
 </html>
