font-size: 1.6rem;

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -31,7 +31,7 @@
     
     <!--SECTION ACCUEIL -->
     <section id="accueil">
-        <h1>Moi c'est Natacha Desse.</h1>
+        <h1>Moi c'est Natacha Desse</h1>
         <p class="titre-h2"><strong>Développeuse</strong> en formation <strong> Front/Back</strong></p>
 
         <div id="image-cover" class="flex ease">
