--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="Site CV Natacha.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="icon" href="img\JB7A0519_xs.jpg">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
     <title>Natacha Desse</title>
 </head>
 <body>
@@ -199,7 +201,7 @@
                 <p>Diplôme 2ème année en Economie et Management</p>
             </div>
 
-            <img class="crypto-punk" src="img\crypto punk 240_s.png" alt="crypto punk_240">
+            <img class="crypto-punk box" src="img\crypto punk 240_s.png" alt="crypto punk_240">
         </div>
     </section>
 
@@ -213,9 +215,7 @@
     </section>
 
 
-
 <script src="Site CV Natacha.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
+
 </body>
 </html>
