ajout section expérience pro

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -60,8 +60,6 @@
         <h2>Parcours</h2>
         <div class="decalage gris"></div>
     </div>
-    <br>
-
     <div class="main-text">
         <p>Issue du secteur de la <em>finance</em> en <em>Gestion d’Actifs</em>, 
             j’ai travaillé en tant qu’analyste financière dans les <em>Produits Structurés</em> à Lyxor 
@@ -211,6 +209,63 @@
         <div class="titre"> 
             <h2>Expérience professionnelle</h2>
             <div class="decalage noir"></div>
+        </div>
+
+        <div class="main-text">
+            <div class="item-experience reveal">
+                <h3>Product Manager</h3>
+                <p>2022-2021</p>
+                <br>
+                <ul>
+                    <li>Coordonner les équipes lors des lancements d’ETFs thématiques et crypto ETNs</li>
+                    <li>Mener les transitions ESG pour plusieurs de nos produits </li>
+                    <li>Développer des dashboards de suivis statistiques et participation à la promotion</li>
+                </ul>
+            </div>
+
+            <div class="item-experience reveal">
+                <h3>Analyste Quantitatif</h3>
+                <p>2019-2021</p>
+                <br>
+                <ul>
+                    <li>Création d’outils quant pour les gérants de portefeuille pour simuler leur exposition de portefeuille</li>
+                    <li>Modélisation de capital en fonction de conditions de marché</li>
+                    <li>Présentation aux clients des études sur les solutions d’ingénierie financière retenues</li>
+                </ul>
+            </div>
+
+            <div class="item-experience reveal">
+                <h3>Analyste Solutions Dédiées</h3>
+                <p>2017–2018</p>
+                <br>
+                <ul>
+                    <li>Développer des outils pour des backtests de séries financières</li>
+                    <li>Réalisation de dashboard sur R</li>
+                    <li>Automation de process sur VBA</li>
+                </ul>
+            </div>
+
+            <div class="item-experience reveal">
+                <h3>Product Marketing</h3>
+                <p>2016-2016</p>
+                <br>
+                <ul>
+                    <li>Création de présentation produits sur les fonds actifs</li>
+                    <li>Réalisation d’études stratégiques</li>
+                    <li>Amélioration de process et de fichiers par automation </li>
+                </ul>
+            </div>
+
+            <div class="item-experience reveal">
+                <h3>Consultante</h3>
+                <p>2013–2014</p>
+                <br>
+                <ul>
+                    <li>Analyse financière et aide à la création de business plans sur des fonds hoteliers</li>
+                    <li>Analyse sur la commercialisation de la compensation commerciale/ habitation à Paris</li>
+                </ul>
+            </div>
+
         </div>
     </section>
 
