Amélioration section competences + logos

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="img\JB7A0519_xs.jpg">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
+    <script src="https://kit.fontawesome.com/9c9ea5f9c9.js" crossorigin="anonymous"></script>
     <title>Natacha Desse</title>
 </head>
 <body>
@@ -90,6 +91,7 @@
         <div class="main-text blanc">
             
             <div class="bloc-compétence">
+                <i class="fa-solid fa-code"></i>
                 <h3>Langages de programmation</h3>
                 <div class="bloc-compétences appear">
                     <h4>R</h4>
@@ -109,7 +111,7 @@
                 </div>
 
                 <div class="bloc-compétences appear">           
-                <h4>Javascript et Java</h4>
+                <h4>Javascript / Java</h4>
                 <ul>
                     <li>Javascript pour le Web</li>
                     <li>Java EE</li>
@@ -121,7 +123,7 @@
                 <p>Bonne utilisation</p>
                 </div>            
 
-                <div class="bloc-compétences">
+                <div class="bloc-compétences appear">
                 <h4>Docker</h4>
                 <p>Bonnes notions</p>
                 </div>
@@ -129,6 +131,7 @@
             
 
             <div class="bloc-langue bloc-compétence appear">
+                <i class="fa-solid fa-earth-americas"></i>
                 <h3>Langues parlées</h3>
                 <div class="langues-parlées">
                     <div class="langue francais">
@@ -152,7 +155,7 @@
         <div id="repère-cursus" class="repère"></div>       
         <div class="titre"> 
             <h2>Cursus académique</h2>
-            <div class="decalage gris actionDecalageCursus"></div>
+            <div class="decalage actionDecalageCursus"></div>
         </div>
 
         <div class="main-text">
@@ -199,8 +202,6 @@
                 <br>
                 <p>Diplôme 2ème année en Economie et Management</p>
             </div>
-
-            <img class="crypto-punk box" src="img\crypto punk 240_s.png" alt="crypto punk_240">
         </div>
     </section>
 
@@ -214,7 +215,8 @@
 
         <div class="main-text">
             <div class="item-experience reveal">
-                <h3>Product Manager</h3>
+                <div class="logo"><img src="img/Vaneck-logo.png" alt="Vaneck logo">
+                <h3>Product Manager</h3></div>
                 <p>2022-2021</p>
                 <br>
                 <ul>
@@ -227,6 +229,7 @@
             <div class="item-experience reveal">
                 <h3>Analyste Quantitatif</h3>
                 <p>2019-2021</p>
+                <div class="logo"><img src="img/Natixis-logo.png" alt="Natixis logo"></div>
                 <br>
                 <ul>
                     <li>Création d’outils quant pour les gérants de portefeuille pour simuler leur exposition de portefeuille</li>
@@ -238,6 +241,7 @@
             <div class="item-experience reveal">
                 <h3>Analyste Solutions Dédiées</h3>
                 <p>2017–2018</p>
+                <div class="logo"><img src="img/Lyxor logo.png" alt="Lyxor logo"></div>
                 <br>
                 <ul>
                     <li>Développer des outils pour des backtests de séries financières</li>
@@ -249,6 +253,7 @@
             <div class="item-experience reveal">
                 <h3>Product Marketing</h3>
                 <p>2016-2016</p>
+                <div class="logo"><img src="img/Lyxor logo.png" alt="Lyxor logo"></div>
                 <br>
                 <ul>
                     <li>Création de présentation produits sur les fonds actifs</li>
@@ -260,6 +265,7 @@
             <div class="item-experience reveal">
                 <h3>Consultante</h3>
                 <p>2013–2014</p>
+                <div class="logo"><img src="img/Wisedome-logo.jpg" alt="Wisedome logo"></div>
                 <br>
                 <ul>
                     <li>Analyse financière et aide à la création de business plans sur des fonds hoteliers</li>
