--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -25,8 +25,7 @@
                 <li><a href="#repère-compétences" class="element-menu">Compétences</a></li>
                 <li><a href="#repère-cursus" class="element-menu">Cursus Académique</a></li>
                 <li><a href="#repère-experience-pro" class="element-menu">Expérience Pro</a></li>
-                <li><a href="#" class="element-menu">Centres d'intérêt</a></li>
-                <li><a href="#" class="element-menu">Contact</a></li>
+                <li><a href="#repère-contact" class="element-menu">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -93,14 +92,6 @@
             <div class="bloc-compétence">
                 <i class="fa-solid fa-code"></i>
                 <h3>Langages de programmation</h3>
-                <div class="bloc-compétences appear">
-                    <h4>R</h4>
-                    <ul>
-                        <li>Explication de comportements financiers par facteurs (régressions pénalisées)</li>
-                        <li>Modélisation par clustering </li>
-                        <li>Modélisation de scénarios capital retraite en fonction de conditions de marchés</li>
-                    </ul>
-                </div>
 
                 <div class="bloc-compétences appear">
                 <h4>HTML/CSS</h4>
@@ -127,6 +118,16 @@
                 <h4>Docker</h4>
                 <p>Bonnes notions</p>
                 </div>
+
+                <div class="bloc-compétences appear">
+                    <h4>R</h4>
+                    <ul>
+                        <li>Explication de comportements financiers par facteurs (régressions pénalisées)</li>
+                        <li>Modélisation par clustering </li>
+                        <li>Modélisation de scénarios capital retraite en fonction de conditions de marchés</li>
+                    </ul>
+                </div>
+
             </div>
             
 
@@ -160,27 +161,24 @@
 
         <div class="main-text">
             <div class="item-cursus reveal">
-                <h3>Formation HTML/CSS</h3>
+                <h3><i class="fa-solid fa-graduation-cap"></i>Formation HTML/CSS</h3>
                 <p>2022</p>
                 <h4>Sebell formation</h4>
-                <br>
                 <p><em>Principaux modules:</em>  Modèle des boîtes, Insertion de média, Selecteurs CSS complexes, Animations, Responsive design, Sémantique
                 </p>
             </div>
 
             <div class="item-cursus reveal">
-                <h3>Master 2 – 222 Asset Management</h3>
+                <h3><i class="fa-solid fa-graduation-cap"></i>Master 2 – 222 Asset Management</h3>
                 <p>2017-2018</p>
                 <h4>Université Paris Dauphine</h4>
-                <br>
                 <p><em>Principaux cours:</em>  Construction de Portefeuille, Gestion indicielle, Gestion Alternative, Analyse Financière, Produits Structurés, Arbitrage de Volatilité</p>
             </div>
 
             <div class="item-cursus reveal">
-                <h3>Master 1 - Finance</h3>
+                <h3><i class="fa-solid fa-graduation-cap"></i>Master 1 - Finance</h3>
                 <p>2015 – 2016</p>
                 <h4>Université Paris Dauphine</h4>
-                <br>
                 <p><em>Principaux cours:</em>  Finance de marché, Econométrie, Marché Actions/ Marché Taux, Finance d’entreprise, Dérivés</p>
                 <br>
                 <p><em>Mémoire :</em>  L’impact des FinTechs sur la gestion d’actif en France 
@@ -188,20 +186,26 @@
             </div>            
 
             <div class="item-cursus reveal">
-                <h3>L3 - Management</h3>
+                <h3><i class="fa-solid fa-graduation-cap"></i>L3 - Management</h3>
                 <p>2014 – 2015</p>
                 <h4>Université Paris Dauphine</h4>
-                <br>
                 <p><em>Principaux cours :</em>  Finance, Comptabilité, Fiscalité, Droit du travail, Statistiques, Marketing</p>
             </div>
 
             <div class="item-cursus reveal">
-                <h3>L2 – Diplôme d’Economie et de Gestion Appliqué à Dauphine (DEGEAD) </h3>
+                <h3><i class="fa-solid fa-graduation-cap"></i>L2 – Diplôme d’Economie et de Gestion Appliqué à Dauphine (DEGEAD) </h3>
                 <p>2012- 2014</p>
                 <h4>Université Paris Dauphine</h4>
-                <br>
                 <p>Diplôme 2ème année en Economie et Management</p>
             </div>
+
+            <div class="item-cursus reveal">
+                <h3><i class="fa-solid fa-graduation-cap"></i>BACCALAURÉAT Scientifique</h3>
+                <p>2012</p>
+                <h4>Lycée Saint Thomas de Villeneuve</h4>
+                <p>Mention : Bien</p>
+            </div>
+
         </div>
     </section>
 
@@ -210,15 +214,17 @@
         <div id="repère-experience-pro" class="repère"></div>       
         <div class="titre"> 
             <h2>Expérience professionnelle</h2>
-            <div class="decalage"></div>
+            <div class="decalage actionDecalageExperience"></div>
         </div>
 
         <div class="main-text">
             <div class="item-experience reveal">
-                <div class="logo"><img src="img/Vaneck-logo.png" alt="Vaneck logo">
-                <h3>Product Manager</h3></div>
+                <div class="logo">
+                    <h3>Product Manager</h3>
+                    <img src="img/Vaneck-logo.jpeg" alt="Vaneck logo">
+                </div>
                 <p>2022-2021</p>
-                <br>
+                <p class="entreprise">VanEck</p>
                 <ul>
                     <li>Coordonner les équipes lors des lancements d’ETFs thématiques et crypto ETNs</li>
                     <li>Mener les transitions ESG pour plusieurs de nos produits </li>
@@ -227,10 +233,12 @@
             </div>
 
             <div class="item-experience reveal">
-                <h3>Analyste Quantitatif</h3>
+                <div class="logo">
+                    <h3>Analyste Quantitatif</h3>
+                    <img src="img/Natixis_logo.png" alt="Natixis logo">
+                </div>
                 <p>2019-2021</p>
-                <div class="logo"><img src="img/Natixis-logo.png" alt="Natixis logo"></div>
-                <br>
+                <p class="entreprise">Natixis Investment Managers</p>
                 <ul>
                     <li>Création d’outils quant pour les gérants de portefeuille pour simuler leur exposition de portefeuille</li>
                     <li>Modélisation de capital en fonction de conditions de marché</li>
@@ -239,10 +247,12 @@
             </div>
 
             <div class="item-experience reveal">
-                <h3>Analyste Solutions Dédiées</h3>
+                <div class="logo">
+                    <h3>Analyste Solutions Dédiées</h3>
+                    <img src="img/logo-lyxor.jpg" alt="Lyxor logo">
+                </div>
                 <p>2017–2018</p>
-                <div class="logo"><img src="img/Lyxor logo.png" alt="Lyxor logo"></div>
-                <br>
+                <p class="entreprise">Lyxor Asset Management</p>
                 <ul>
                     <li>Développer des outils pour des backtests de séries financières</li>
                     <li>Réalisation de dashboard sur R</li>
@@ -251,10 +261,12 @@
             </div>
 
             <div class="item-experience reveal">
-                <h3>Product Marketing</h3>
+                <div class="logo">
+                    <h3>Product Marketing</h3>
+                    <img src="img/logo-lyxor.jpg" alt="Lyxor logo">
+                </div>
                 <p>2016-2016</p>
-                <div class="logo"><img src="img/Lyxor logo.png" alt="Lyxor logo"></div>
-                <br>
+                <p class="entreprise">Lyxor Asset Management</p>
                 <ul>
                     <li>Création de présentation produits sur les fonds actifs</li>
                     <li>Réalisation d’études stratégiques</li>
@@ -263,10 +275,12 @@
             </div>
 
             <div class="item-experience reveal">
-                <h3>Consultante</h3>
+                <div class="logo">
+                    <h3>Consultante</h3>
+                    <img src="img/Wisedome-logo-xxs.jpg" alt="Wisedome logo">
+                </div>
                 <p>2013–2014</p>
-                <div class="logo"><img src="img/Wisedome-logo.jpg" alt="Wisedome logo"></div>
-                <br>
+                <p class="entreprise">Wisedome Conseil</p>
                 <ul>
                     <li>Analyse financière et aide à la création de business plans sur des fonds hoteliers</li>
                     <li>Analyse sur la commercialisation de la compensation commerciale/ habitation à Paris</li>
@@ -276,6 +290,42 @@
         </div>
     </section>
 
+    <section id="contact">
+        <div id="repère-contact" class="repère"></div>       
+        <div class="titre"> 
+            <h2>Contact</h2>
+            <div class="decalage actionDecalageContact"></div>
+        </div>
+    
+        <div class="main-text">
+            <p>Actuellement à la recherche d'un nouvel emploi, je suis intéressée par les postes de :</p>
+            <br>
+            <p><strong>Développeur Full-stack • Développeur Front End</strong></p>
+
+            <div class="item-contact background-purple">
+                <i class="fa-solid fa-mobile-screen"></i>
+                <p>+33605404885</p>
+            </div>
+
+            <div class="item-contact background-green">
+                <i class="fa-regular fa-envelope"></i>
+                <p>natacha.chaville@gmail.com</p>
+            </div>
+
+            <div class="item-contact background-blue">
+                <i class="fa-brands fa-linkedin"></i>
+                <p>Linkedin</p>
+            </div>
+
+            <div class="item-contact">
+                <p class="bold">Vous souhaitez me rencontrer ?</p>
+                <p>N'hésitez pas à me faire part de votre envie et nous essayerons d'organiser une rencontre</p>
+            </div>
+
+        </div>        
+
+
+    </section>
 
 <script src="Site CV Natacha.js"></script>
 
