Modification des tailles de sections

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -152,6 +152,7 @@
         </div>
     </section>
 
+    <!-------- SECTION CURSUS ---------->
     <section id="cursus">
         <div id="repère-cursus" class="repère"></div>       
         <div class="titre"> 
@@ -209,7 +210,7 @@
         </div>
     </section>
 
-
+     <!-------- SECTION EXPERIENCE PRO ---------->
     <section id="experience-pro">
         <div id="repère-experience-pro" class="repère"></div>       
         <div class="titre"> 
@@ -290,6 +291,7 @@
         </div>
     </section>
 
+    <!-------- SECTION CONTACT ---------->
     <section id="contact">
         <div id="repère-contact" class="repère"></div>       
         <div class="titre"> 
