debut page competences bis

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -62,16 +62,18 @@
             <div class="decalage actionDecalageParcours"></div>
         </div>
         <div class="main-text">
-            <p class="appear">Issue du secteur de la <em>finance</em> en <em>Gestion d’Actifs</em>, 
+            
+            <p class="appear"><i class="fa-solid fa-chart-line hide-mobile bckg-grey"></i>Issue du secteur de la <em>finance</em> en <em>Gestion d’Actifs</em>, 
                 j’ai travaillé en tant qu’analyste financière dans les <em>Produits Structurés</em> à Lyxor 
                 ainsi qu’en tant qu’<em>Analyste Quant</em> au sein de Natixis IM Solutions.</p>
-            <p class="appear">J’ai par la suite eu une expérience à l’international à <em>Amsterdam</em> 
+                
+            <p class="appear"><i class="fa-solid fa-rocket hide-mobile bckg-brique"></i>J’ai par la suite eu une expérience à l’international à <em>Amsterdam</em> 
                 en tant que Cheffe de Produits en charge des <em>lancements d’ETFs</em>.</p>
-            <p class="appear">M’étant beaucoup intéressée à la <em>modélisation financière sous R </em>
+            <p class="appear"><i class="fa-solid fa-laptop-code hide-mobile bckg-grey"></i>M’étant beaucoup intéressée à la <em>modélisation financière sous R </em>
                 et ayant une logique algorithmique, je souhaite aujourd’hui me 
                 tourner vers une carrière de <strong>Concepteur/Développeur</strong> en passant 
                 par un parcours en <em>Alternance</em>.</p> 
-            <p class="appear">La <strong>Programmation Orientée Objet</strong> est le type de programmation
+            <p class="appear"><i class="fa-solid fa-terminal hide-mobile bckg-brique"></i>La <strong>Programmation Orientée Objet</strong> est le type de programmation
                 qui m’attire le plus. Surement l’une des plus difficile à maitriser, 
                 j’en apprécie les possibilités de <em>conception et de création.</em> 
                 Je la trouve complète et demande une véritable réflexion et <em>gestion de projet</em>.</p>
