Section experience pro animation + Page contact

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -102,7 +102,7 @@
                     <h4>HTML/CSS</h4>
                     <ul>
                         <li>Conception de sites web</li>
-                        <li>Utilisation de Responsive Design</li>
+                        <li>Responsive Design</li>
                     </ul>
                     </div>
 
@@ -110,28 +110,31 @@
                     <h4>Javascript / Java</h4>
                     <ul>
                         <li>Javascript pour le Web</li>
+                        <li>Utilisation de JSON/AJAX/Gulp</li>
                         <li>Java EE</li>
                     </ul>
                     </div>
 
                     <div class="bloc-compétences appear">
-                    <h4>Git/ Linux/ SQL</h4>
-                    <p>Bonne utilisation</p>
+                    <h4>SQL / Python</h4>
+                    <p>Solides bases</p>
                     </div>            
-
-                    <div class="bloc-compétences appear">
-                    <h4>Docker</h4>
-                    <p>Bonnes notions</p>
-                    </div>
 
                     <div class="bloc-compétences appear">
                         <h4>R</h4>
                         <ul>
-                            <li>Explication de comportements financiers par facteurs (régressions pénalisées)</li>
-                            <li>Modélisation par clustering </li>
+                            <li>Modélisations financières: factorisation/clustering</li>
+                            <li>Utilisation de Shiny</li>
                             <li>Modélisation de scénarios capital retraite en fonction de conditions de marchés</li>
                         </ul>
                     </div>
+
+                    <div class="bloc-compétences appear">
+                        <h4>Docker/Git/Linux</h4>
+                        <p>Bonnes notions</p>
+                    </div>
+
+
                 </div>
             </div>
             
@@ -165,7 +168,7 @@
             <div class="decalage actionDecalageCursus"></div>
         </div>
 
-        <div class="main-text">
+        <div class="main-text reveal">
             <div class="item-cursus reveal">
                 <h3><i class="fa-solid fa-graduation-cap"></i>Formation HTML/CSS</h3>
                 <p>2022</p>
@@ -224,7 +227,7 @@
         </div>
 
         <div class="main-text">
-            <div class="item-experience reveal">
+            <div class="item-experience reveal-left">
                 <div class="logo">
                     <h3>Product Manager</h3>
                     <img src="img/Vaneck-logo.jpeg" alt="Vaneck logo">
@@ -238,7 +241,7 @@
                 </ul>
             </div>
 
-            <div class="item-experience reveal">
+            <div class="item-experience reveal-right">
                 <div class="logo">
                     <h3>Analyste Quantitatif</h3>
                     <img src="img/Natixis_logo.png" alt="Natixis logo">
@@ -252,7 +255,7 @@
                 </ul>
             </div>
 
-            <div class="item-experience reveal">
+            <div class="item-experience reveal-left">
                 <div class="logo">
                     <h3>Analyste Solutions Dédiées</h3>
                     <img src="img/logo-lyxor.jpg" alt="Lyxor logo">
@@ -266,7 +269,7 @@
                 </ul>
             </div>
 
-            <div class="item-experience reveal">
+            <div class="item-experience reveal-right">
                 <div class="logo">
                     <h3>Product Marketing</h3>
                     <img src="img/logo-lyxor.jpg" alt="Lyxor logo">
@@ -280,7 +283,7 @@
                 </ul>
             </div>
 
-            <div class="item-experience reveal">
+            <div class="item-experience reveal-left">
                 <div class="logo">
                     <h3>Consultante</h3>
                     <img src="img/Wisedome-logo-xxs-bis.jpg" alt="Wisedome logo">
@@ -306,11 +309,11 @@
     
         <div class="main-text">
             <p>Actuellement à la recherche d'un nouvel emploi, je suis intéressée par les postes de :</p>
-            <p><strong>Développeur Full-stack • Développeur Front End</strong></p>
+            <p><strong>Développeur Full-stack • Concepteur Développeur</strong></p>
 
             <div class="item-contact background-purple">
                 <i class="fa-solid fa-mobile-screen"></i>
-                <p>+33605404885</p>
+                <p>(+33)6 05 40 48 85</p>
             </div>
 
             <div class="item-contact background-green">
