Fin changement pour version tablette

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -117,27 +117,36 @@
 
                     <div class="bloc-compétences appear">
                     <h4>SQL / Python</h4>
-                    <p>Solides bases</p>
+                    <p>Solides connaissances</p>
                     </div>            
 
                     <div class="bloc-compétences appear">
                         <h4>R</h4>
                         <ul>
-                            <li>Modélisations financières: factorisation/clustering</li>
-                            <li>Utilisation de Shiny</li>
-                            <li>Modélisation de scénarios capital retraite en fonction de conditions de marchés</li>
+                            <li>Modélisations financières : factorisation/clustering</li>
+                            <li>Utilisation de la library Shiny</li>
                         </ul>
                     </div>
-
-                    <div class="bloc-compétences appear">
-                        <h4>Docker/Git/Linux</h4>
-                        <p>Bonnes notions</p>
-                    </div>
-
-
                 </div>
             </div>
             
+            <div class="bloc-compétence">
+                <div class="encapsule-titre-icone">
+                    <i class="fa-solid fa-display rotate"></i>
+                    <h3 id="h3-environnement">Environnement de travail</h3>
+                </div>
+
+                <div class="tableau-compétences environnement-tableau">
+                    <div class="bloc-compétences environnement-div appear">
+                        <ul class="list-environnement-travail">
+                            <li><h4>Docker</h4></li>
+                            <li><h4>Git</h4></li>
+                            <li><h4>Linux</h4></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
             <div class="bloc-langue bloc-compétence appear">
                 <i class="fa-solid fa-earth-americas rotate"></i>
                 <h3>Langues parlées</h3>
