--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -34,12 +34,14 @@
     <!--SECTION ACCUEIL -->
     <section id="accueil">
         <div id="repère-accueil" class="repère"></div>
-        <h1>Moi c'est Natacha Desse</h1>
-        <p class="titre-h2"><strong>Développeuse</strong> en formation <strong> Front/Back</strong></p>
+        <h1 class="hide-PC">Moi c'est Natacha Desse</h1>
+        <p class="titre-h2 hide-PC"><strong>Développeuse</strong> en formation <strong> Front/Back</strong></p>
 
         <div id="image-cover" class="flex ease">
-            <!-- Ajouter ici les différentes sources selon media port-->
-            <!--<img  class= "Amsterdam flex" src="img/JB7A0519_s.jpg" alt="Natacha Desse"> -->
+            <div class="hide-mobile">
+                <h1><span>Moi c'est</span><div class="background-color-animation">Natacha Desse</div></h1>
+                <span class="titre-h2-PC"><div class="background-grey-animation1"><strong>Développeuse</strong></div><span> en formation </span><div class="background-grey-animation2"><strong> Front/Back</strong></div></apan>
+            </div>
         </div>
 
         <p class="sous-titre"><em>A la recherche</em> de ma <em>prochaine</em> <strong>collaboration professionnelle</strong> dans le domaine de la <em>programmation.</em> 
@@ -63,17 +65,17 @@
         </div>
         <div class="main-text">
             
-            <p class="appear"><i class="fa-solid fa-chart-line hide-mobile bckg-grey"></i>Issue du secteur de la <em>finance</em> en <em>Gestion d’Actifs</em>, 
+            <p class="appear"><i class="fa-solid fa-chart-line hide-tablette bckg-grey"></i>Issue du secteur de la <em>finance</em> en <em>Gestion d’Actifs</em>, 
                 j’ai travaillé en tant qu’analyste financière dans les <em>Produits Structurés</em> à Lyxor 
                 ainsi qu’en tant qu’<em>Analyste Quant</em> au sein de Natixis IM Solutions.</p>
                 
-            <p class="appear"><i class="fa-solid fa-rocket hide-mobile bckg-brique"></i>J’ai par la suite eu une expérience à l’international à <em>Amsterdam</em> 
+            <p class="appear"><i class="fa-solid fa-rocket hide-tablette bckg-brique"></i>J’ai par la suite eu une expérience à l’international à <em>Amsterdam</em> 
                 en tant que Cheffe de Produits en charge des <em>lancements d’ETFs</em>.</p>
-            <p class="appear"><i class="fa-solid fa-laptop-code hide-mobile bckg-grey"></i>M’étant beaucoup intéressée à la <em>modélisation financière sous R </em>
+            <p class="appear"><i class="fa-solid fa-laptop-code hide-tablette bckg-grey"></i>M’étant beaucoup intéressée à la <em>modélisation financière sous R </em>
                 et ayant une logique algorithmique, je souhaite aujourd’hui me 
                 tourner vers une carrière de <strong>Concepteur/Développeur</strong> en passant 
                 par un parcours en <em>Alternance</em>.</p> 
-            <p class="appear"><i class="fa-solid fa-terminal hide-mobile bckg-brique"></i>La <strong>Programmation Orientée Objet</strong> est le type de programmation
+            <p class="appear"><i class="fa-solid fa-terminal hide-tablette bckg-brique"></i>La <strong>Programmation Orientée Objet</strong> est le type de programmation
                 qui m’attire le plus. Surement l’une des plus difficile à maitriser, 
                 j’en apprécie les possibilités de <em>conception et de création.</em> 
                 Je la trouve complète et demande une véritable réflexion et <em>gestion de projet</em>.</p>
