Fin des sections Experience + contact

--- a/Site CV Natacha.html
+++ b/Site CV Natacha.html
@@ -141,9 +141,9 @@
                 <div class="tableau-compétences environnement-tableau">
                     <div class="bloc-compétences environnement-div appear">
                         <ul class="list-environnement-travail">
-                            <li><h4>Docker</h4></li>
+                            <li><h4>Windows/Linux</h4></li>
                             <li><h4>Git</h4></li>
-                            <li><h4>Linux</h4></li>
+                            <li><h4>Docker</h4></li>
                         </ul>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
         </div>
 
         <div class="main-text">
-            <div class="item-experience reveal-left">
+            <div class="item-experience reveal-left blur">
                 <div class="logo">
                     <h3>Product Manager</h3>
                     <img src="img/Vaneck-logo.jpeg" alt="Vaneck logo">
@@ -252,7 +252,7 @@
                 </ul>
             </div>
 
-            <div class="item-experience reveal-right">
+            <div class="item-experience reveal-right blur">
                 <div class="logo">
                     <h3>Analyste Quantitatif</h3>
                     <img src="img/Natixis_logo.png" alt="Natixis logo">
@@ -266,7 +266,7 @@
                 </ul>
             </div>
 
-            <div class="item-experience reveal-left">
+            <div class="item-experience reveal-left blur">
                 <div class="logo">
                     <h3>Analyste Solutions Dédiées</h3>
                     <img src="img/logo-lyxor.jpg" alt="Lyxor logo">
@@ -280,7 +280,7 @@
                 </ul>
             </div>
 
-            <div class="item-experience reveal-right">
+            <div class="item-experience reveal-right blur">
                 <div class="logo">
                     <h3>Product Marketing</h3>
                     <img src="img/logo-lyxor.jpg" alt="Lyxor logo">
@@ -294,7 +294,7 @@
                 </ul>
             </div>
 
-            <div class="item-experience reveal-left">
+            <div class="item-experience reveal-left blur">
                 <div class="logo">
                     <h3>Consultante</h3>
                     <img src="img/Wisedome-logo-xxs-bis.jpg" alt="Wisedome logo">
