Tentative correction responsive design mobile

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <p class="sous-titre"><em>A la recherche</em> de ma <em>prochaine</em> <strong>collaboration professionnelle</strong> dans le domaine de la <em>programmation.</em> 
         </p>
-        <p class="sous-titre2"><strong>Développeuse</strong>, ancienne <em>cheffe de projets</em> et <em>analyste quant</em> en finance
+        <p class="sous-titre2"><strong>Développeuse</strong>, ancienne <em>Cheffe de Projets</em> et <em>Analyste Quantitatif</em> en finance
         </p>
 
         <div class="boutons"> 
