changes titres PC ajustement centre et background

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
         <div id="image-cover" class="flex ease">
             <div class="hide-mobile">
-                <h1><span>Moi c'est</span><div class="background-color-animation">Natacha Desse</div></h1>
-                <span class="titre-h2-PC"><div class="background-grey-animation1"><strong>Développeuse</strong></div><span> en formation </span><div class="background-grey-animation2"><strong> Front/Back</strong></div></apan>
+                <div class="div-h1"><h1>Moi c'est<div class="background-color-animation"><p>Natacha Desse</p></div></h1></div>
+                <span class="titre-h2-PC"><strong>Développeuse</strong> en formation <strong> Front/Back</strong></span>
             </div>
         </div>
 
