--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
     <script src="https://kit.fontawesome.com/9c9ea5f9c9.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
     <title>Natacha Desse</title>
 </head>
 <body>
-    
+<!--Loading-->  
+<div class="se-pre-con"></div>    
+
     <!--MENU DEROULANT -->
     <nav>
         <div id="photo-profile"><a href="#repère-accueil"><img src="img\JB7A0519_xs.jpg" alt="profile Natacha Desse"></a></div>
@@ -46,7 +50,7 @@
 
         <p class="sous-titre"><em>A la recherche</em> de ma <em>prochaine</em> <strong>collaboration professionnelle</strong> dans le domaine de la <em>programmation.</em> 
         </p>
-        <p class="sous-titre2"><strong>Développeuse</strong>, ancienne <em>Cheffe de Projets</em> et <em>Analyste Quantitatif</em> en finance
+        <p class="sous-titre2"><strong>Développeuse</strong>, ancienne <em>Chef de Projets</em> et <em>Analyste Quantitatif</em> en finance
         </p>
 
         <div class="boutons"> 
